@@ -12,7 +12,7 @@ DESIGN
 
 HIGH
 - add arrows ala Bending Light (with some differences) to atoms A and C in triatomic molecule
-- clean up canvas layout code in all tabs, base layout on molecule location
+- clean up canvas layout code in all tabs, base layout on molecule location, center molecules between plates
 - ControlPanelNode uses PSwing, which clips check box labels on Mac, see #2447
 - Jmol: adjust initial orientation of NH3, CH3F, CHF3, CH2F2, CHCl3
 - move Jmol console to Developer menu
